...
        }}
      />
      <Tabs.Screen
        name="workouts"
        options={{
          title: t("tab.workouts"),
          tabBarButtonTestID: "tab-workouts",
          tabBarIcon: icon("dumbbell"),
        }}
      />
      <Tabs.Screen
        name="library"
        options={{
          title: t("tab.library"),
          tabBarButtonTestID: "tab-library",
          tabBarIcon: icon("list"),
        }}
      />
      <Tabs.Screen
        name="stats"
        options={{
...
        }}
      />
      <Tabs.Screen
        name="settings"
        options={{
          title: t("tab.settings"),
          tabBarButtonTestID: "tab-settings",
          tabBarIcon: icon("settings"),
        }}
      />
    </Tabs>
  );
}
...
